syntax = "proto2";
package com.common.msg;
import "TaskModuleMsg.proto";

message CommonTask{
	//0：未完成  1：已完成  2：已经提交领奖
	required int32 state = 1;
	//任务所需参数
	repeated ProtoTypes  params = 2;
	//任务配置
	required string  taskId = 3;
}
